@@ -1,0 +1,10 @@
+#   Copyright 2004-2005 by Kevin Smith
+#   released under the MIT-style wxruby2 license
+
+%include "../common.i"
+
+%module wxSystemSettings
+
+%import "include/wxObject.h"
+
+%include "include/wxSystemSettings.h"
